footer section styling

--- a/index.html
+++ b/index.html
@@ -565,7 +565,8 @@ data-item="bbq"
 
     <footer>
         <div class="container-fluid">
-            <div class="col-md-6 footer py-5">
+            <div class="row">
+            <div class="col-md-6 footer-title py-5">
                 <h1 class="text-capitalize text-center">
                     <strong class="banner-title">Pizza On</strong>
                 </h1>
@@ -604,6 +605,7 @@ data-item="bbq"
                     </span>
                     <span>hamsoace@gmail.com</span>
                 </p>
+            </div>
             </div>
         </div>
     </footer>
