popup form styling

--- a/index.html
+++ b/index.html
@@ -70,9 +70,7 @@
                 <i class="fas fa-shopping-cart"></i>
               </span>
               <p class="mb-0 text-capitilize">
-                <span id="item-count">2</span>
-                items - Kshs.
-                <span id="item-total">1000</span>
+                <span id="item-count">ORDER NOW</span>
               </p>
             </div>
           </div>
@@ -87,7 +85,7 @@
               <strong class="banner-title">Pizza <br />On Dial</strong>
             </h1>
             <a href="#store" class="btn banner-link text-uppercase my-2"
-              >Buy Now</a
+              >ORDER Now</a
             >
           </div>
         </div>
@@ -106,7 +104,7 @@
               numquam iste dolores reiciendis, optio excepturi reprehenderit
               saepe, ea quaerat et ad!
             </p>
-            <a href="#" class="btn btn-black text-uppercase">Buy Now</a>
+            <a href="#" class="btn btn-black text-uppercase">ORDER Now</a>
           </div>
           <div class="col-10 mx-auto col-md-6 my-5 align-self-center">
             <div class="about-img_container">
@@ -541,7 +539,7 @@ data-item="bbq"
                         <p class="my-3"></p>
                         <p class="my-3"></p>
                         <p class="my-3"></p>
-                        <button class="btn btn-maroon text-capitalize mb-3">order now</button>
+                        <button class="btn btn-maroon text-capitalize mb-3 popup-btn">order now</button>
                         <p class="text-lowercase mb-4">starting at Kshs.750</p>
                         <img src="./img/img2.png" class="img-fluid" alt="">
                     </div>
@@ -562,6 +560,8 @@ data-item="bbq"
             </div>
         </div>
     </section>
+
+    
 
     <footer>
         <div class="container-fluid">
@@ -609,6 +609,20 @@ data-item="bbq"
             </div>
         </div>
     </footer>
+    <section class="popup">
+      <div class="container">
+        <div class="popup-wrap">
+          <div class="popup-left"></div>
+          <div class="popup-right">
+            <p class="close">X</p>
+            <h2>Order Your Pizza</h2>
+            <form id="myForm">
+              
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- jquery -->
     <script src="js/jquery-3.3.1.min.js"></script>
