--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               <a href="#services" class="nav-link">Services</a>
             </li>
             <li class="nav-item active">
-              <a href="#pizza" class="nav-link">Order</a>
+              <a href="./order.html" class="nav-link">Order</a>
             </li>
           </ul>
           <div class="nav-info-items d-none d-lg-flex">
@@ -69,8 +69,8 @@
               <span class="cart-info_icon mr-lg-3">
                 <i class="fas fa-shopping-cart"></i>
               </span>
-              <p class="mb-0 text-capitilize">
-                <span id="item-count">ORDER NOW</span>
+              <p class="mb-0 text-capitilize btn">
+                <a href="./order.html"><span id="item-count">ORDER NOW</span></a>
               </p>
             </div>
           </div>
@@ -84,7 +84,7 @@
               <br />
               <strong class="banner-title">Pizza <br />On Dial</strong>
             </h1>
-            <a href="#store" class="btn banner-link text-uppercase my-2"
+            <a href="./order.html" class="btn banner-link text-uppercase my-2"
               >ORDER Now</a
             >
           </div>
@@ -104,7 +104,7 @@
               numquam iste dolores reiciendis, optio excepturi reprehenderit
               saepe, ea quaerat et ad!
             </p>
-            <a href="#" class="btn btn-black text-uppercase">ORDER Now</a>
+            <a href="./order.html" class="btn btn-black text-uppercase">ORDER Now</a>
           </div>
           <div class="col-10 mx-auto col-md-6 my-5 align-self-center">
             <div class="about-img_container">
@@ -526,7 +526,7 @@ data-item="bbq"
                         <p class="my-3"></p>
                         <p class="my-3"></p>
                         <p class="my-3"></p>
-                        <button class="btn btn-maroon text-capitalize mb-3">order now</button>
+                        <button class="btn btn-maroon text-capitalize mb-3"><a href="./order.html">order now</a></button>
                         <p class="text-lowercase mb-4">starting at Kshs.450</p>
                         <img src="./img/img1.png" class="img-fluid" alt="">
                     </div>
@@ -539,7 +539,7 @@ data-item="bbq"
                         <p class="my-3"></p>
                         <p class="my-3"></p>
                         <p class="my-3"></p>
-                        <button class="btn btn-maroon text-capitalize mb-3 popup-btn">order now</button>
+                        <button class="btn btn-maroon text-capitalize mb-3 popup-btn"><a href="./order.html">order now</a></button>
                         <p class="text-lowercase mb-4">starting at Kshs.750</p>
                         <img src="./img/img2.png" class="img-fluid" alt="">
                     </div>
@@ -552,7 +552,7 @@ data-item="bbq"
                         <p class="my-3"></p>
                         <p class="my-3"></p>
                         <p class="my-3"></p>
-                        <button class="btn btn-maroon text-capitalize mb-3">order now</button>
+                        <button class="btn btn-maroon text-capitalize mb-3 popup-btn"><a href="./order.html">order now</a></button>
                         <p class="text-lowercase mb-4">starting at Kshs.1000</p>
                         <img src="./img/img3.png" class="img-fluid" alt="">
                     </div>
@@ -609,26 +609,13 @@ data-item="bbq"
             </div>
         </div>
     </footer>
-    <section class="popup">
-      <div class="container">
-        <div class="popup-wrap">
-          <div class="popup-left"></div>
-          <div class="popup-right">
-            <p class="close">X</p>
-            <h2>Order Your Pizza</h2>
-            <form id="myForm">
-              
-            </form>
-          </div>
-        </div>
-      </div>
-    </section>
+    
 
     <!-- jquery -->
     <script src="js/jquery-3.3.1.min.js"></script>
     <!-- bootstrap js -->
     <script src="js/bootstrap.bundle.min.js"></script>
     <!-- script js -->
-    <script src="js/app.js"></script>
+    <script src="./js/app.js"></script>
   </body>
 </html>
