--- a/order.html
+++ b/order.html
@@ -28,7 +28,7 @@
               <label for="type">Type</label>
               <select class="form-control" id="type" required>
                 <option value="">...</option>
-                <option value="chicken tikka">BBQ</option>
+                <option value="BBQ">BBQ</option>
                 <option value="peri peri">Peri Peri</option>
                 <option value="hawaaian">Hawaiian</option>
               </select>
@@ -65,7 +65,7 @@
         </div>
         <div class="col-md-8 hidden" id="orders-div">
           <h3>Your Orders</h3>
-          <table class="table table-striped table-dark">
+          <table class="table table-striped">
             <thead>
               <tr>
                 <th scope="col">Type</th>
